# face_recognition_system

./: .gitignore  README.md
config/: config00.json  config01.json  config02.json  config_rbf320.json  config_retinanet.json  embedding_db.json  test.json
src/: CMakeLists.txt  all_predictors.h  common_utils.cpp  common_utils.h  db_creator.cpp  db_main.cpp  dbmanager.cpp  dbmanager.h  detection_decoders.cpp  detection_decoders.h  draw_utils.cpp  draw_utils.h  embedding_matrix.cpp  face.cpp  face.h  face_detection.cpp  face_detection.h  facedetection.cpp  facedetection.h  facerecognition.cpp  facerecognition.h  faces_manager.cpp  faces_manager.h  identitiestracker.cpp  identitiestracker.h  image_saver.cpp  image_saver.h  io_utils.cpp  io_utils.h  kuhnmunkres.cpp  main.cpp  opencv_predictor.cpp  opencv_predictor.h  openvino_predictor.cpp  openvino_predictor.h  predictor.h  recognition_status_tracker.cpp  recognition_status_tracker.h  test.cpp  test_onet.cpp  (+4 more)
src/config/: RetinaNetResnet50320.json  RetinaNetResnet50320.json.Back  RetinaNetResnet50640.json  face_recog_1stream320.json  face_recog_1stream640.json  face_recog_1stream_RFB.json  face_recog_2stream320.json  face_recog_2stream320_docker.json  face_recog_2stream640.json  face_recog_2stream640_batch1.json  face_recog_2streamSLIM_docker.json  face_recog_2stream_SLIM.json  test.json  test320.json
src/cvision/: classification_tracker.cpp  classifier.cpp  detection_decoder.cpp  detection_decoder.h  funct_utils.h  object_tracker.cpp  opencv_predictor.cpp  opencv_predictor.h  predictor.cpp  predictor.h  retinafacedecoder.h  tensor_rt_predictor.h  ulfddecoder.cpp  videosources.cpp
src/other_code/: main.cpp  pose_detector.cpp  pose_detector.h
src/vision/: classification_tracker.h  classifier.h  common_utils.cpp  common_utils.h  detection_decoders.h  funct_utils.cpp  kuhnmunkres.h  object_tracker.h  opencv_predictor.cpp  opencv_predictor.h  predictor.cpp  predictor.h  retinafacedecoder.cpp  tensor_rt_predictor.cpp  tracker.cpp  tracker.h  ulfddecoder.h  videosources.h
